@@ -505,6 +505,10 @@ a {
  right:110px;
 }
 
+.vol-fixed-label-mini {
+ right:92px;
+}
+
 .v-menu__content {
  max-height:calc((var(--vh, 1vh)*100) - var(--std-font-size));
  white-space:nowrap;
